src/objects/LogGroup__c.object
<CustomObject>
    <customHelpPage>LogHelp</customHelpPage>
    <fields>
        <fullName>GroupIdentifier__c</fullName>
        <inlineHelpText>XXX</inlineHelpText>
        <label>Group Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogConfiguration__c</fullName>
        <inlineHelpText>What record configures the Log Initializer Step that the message was passing through?</inlineHelpText>
        <label>Log Configuration</label>
        <referenceTo>LogConfiguration__c</referenceTo>
        <relationshipLabel>Log Groups</relationshipLabel>
        <relationshipName>LogGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>XXX</inlineHelpText>
        <label>Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>Log Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GroupIdentifier__c</columns>
        <columns>Stamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>